package com.example.minego.models;

public enum Gender {
    Male,
    Female

}
