package com.example.minego.models;

import java.time.LocalDate;

public class Stats {
    public int mineCount;
    public LocalDate startPlaying;
    public int totalSteps;
}
