package com.example.minego.models;

import androidx.annotation.NonNull;

import java.io.Serializable;


public class User implements Serializable {

    public String id;
    public String username;
    public String password;
    public String email;

    public int xp;

    public Backpack backpack;
    public Stats stats;
    public Upgrade upgrade;

    public boolean admin;

    public Gender gender;


    public User() {
    }

    public User(String id, String username, String password, int xp, Backpack backpack,
                Stats stats, Upgrade upgrade, boolean admin, Gender gender, String email) {

        this.id = id;
        this.admin = admin;
        this.username = username;
        this.password = password;
        this.xp = xp;
        this.backpack = backpack;
        this.stats = stats;
        this.upgrade = upgrade;
        this.gender = gender;
        this.email = email;

    }

    public String getId() {
        return id;
    }

    public void setId(String id) {
        this.id = id;
    }

    public String getUsername() {
        return username;
    }

    public void setUsername(String username) {
        this.username = username;
    }

    public String getPassword() {
        return password;
    }

    public void setPassword(String password) {
        this.password = password;
    }

    public int getXp() {
        return xp;
    }

    public void setXp(int xp) {
        this.xp = xp;
    }

    public Backpack getBackpack() {
        return backpack;
    }

    public void setBackpack(Backpack backpack) {
        this.backpack = backpack;
    }

    public Stats getStats() {
        return stats;
    }

    public void setStats(Stats stats) {
        this.stats = stats;
    }

    public Upgrade getUpgrade() {
        return upgrade;
    }

    public void setUpgrade(Upgrade upgrade) {
        this.upgrade = upgrade;
    }

    public boolean isAdmin() {
        return admin;
    }

    public void setAdmin(boolean admin) {
        this.admin = admin;
    }

    public Gender getGender() {
        return gender;
    }

    public void setGender(Gender gender) {
        this.gender = gender;
    }

    public String getEmail() {
        return email;
    }

    public void setEmail(String email) {
        this.email = email;
    }

    @NonNull
    @Override
    public String toString() {
        return "User{" +
                "id='" + id + '\'' +
                ", username='" + username + '\'' +
                ", password='" + password + '\'' +
                ", xp=" + xp +
                ", email=" + email +
                ", backpack=" + backpack +
                ", stats=" + stats +
                ", upgrades=" + upgrade +
                ". admin= " + admin +
                '}';
    }
}
